Reduce model memory by storing state for periodicity testing in a compressed format ({pull}100[#100])
Improve the accuracy of model memory control ({pull}122[#122])
Improve adaption of the modelling of cyclic components to very localised features ({pull}134[#134])

Forecasting of Machine Learning job time series is now supported for large jobs by temporarily storing
model state on disk ({pull}89[#89])

Secure the ML processes by preventing system calls such as fork and exec. The Linux implemenation uses
Seccomp BPF to intercept system calls and is available in kernels since 3.5. On Windows Job Objects prevent
new processes being created and macOS uses the sandbox functionality ({pull}98[#98])

Fix a bug causing us to under estimate the memory used by shared pointers and reduce the memory consumed
by unnecessary reference counting ({pull}108[#108])

Reduce model memory by storing state for testing for predictive calendar features in a compressed format
({pull}127[#127])

=== Bug Fixes

Age seasonal components in proportion to the fraction of values with which they're updated ({pull}88[#88])
Persist and restore was missing some of the trend model state ({pull}#99[#99])
Stop zero variance data generating a log error in the forecast confidence interval calculation ({pull}#107[#107])
Fix corner case failing to calculate lgamma values and the correspoinding log errors ({pull}#126[#126])

=== Regressions

=== Known Issues

== Elasticsearch version 6.3.0

=== New Features

=== Enhancements

=== Bug Fixes

Function description for population lat_long results should be lat_long instead of mean ({pull}81[#81])
By-fields should respect model_plot_config.terms ({pull}86[#86])
The trend decomposition state wasn't being correctly upgraded potentially causing the autodetect process to abort ({pull}136[#136])
Fix a SIGSEGV in the autodetect process when jump upgrading from 5.6 to 6.3 ({pull}143[#143])

=== Regressions

=== Known Issues